STL Manager save load binary text

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ remaning.txt
 noway.txt
 kepek
 /src/main/resources/out.stl
+/src/main/resources/cube.stl
+/src/main/resources/cubeText.stl
+/src/main/resources/cubeBin.stl
+/src/main/resources/colored.stl
