stl normal vector calculation and filetest (start)

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ kepek
 /src/main/resources/cubeText.stl
 /src/main/resources/cubeBin.stl
 /src/main/resources/colored.stl
+/src/main/resources/outCubeBin.stl
+/src/main/resources/outCubeBinToText.stl
+/src/main/resources/outCubeText.stl
+/src/main/resources/outCubeTextToBin.stl
+/src/main/resources/coloredT.stl
+/src/main/resources/Sphericon.stl
