stl manager file test

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ kepek
 /src/main/resources/outCubeTextToBin.stl
 /src/main/resources/coloredT.stl
 /src/main/resources/Sphericon.stl
+/src/main/resources/binarySaved.stl
+/src/main/resources/textSaved.stl
