training_tracker egy élhetőbb oktatásért :)

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ kepek
 /src/main/resources/Sphericon.stl
 /src/main/resources/binarySaved.stl
 /src/main/resources/textSaved.stl
+src/main/java/training_tracker/*.html
